# Whitted-Ray-Tracer

./: .gitignore  README.md
Whitted Ray Tracer/: CMakeLists.txt
Whitted Ray Tracer/src/: helpers.cpp  helpers.h
Whitted Ray Tracer/src/canvas/: canvas.cpp  canvas.h
Whitted Ray Tracer/src/primitives/: colour.cpp  colour.h  intersection.cpp  intersection.h  intersections.cpp  intersections.h  matrix.cpp  matrix.h  ray.cpp  ray.h  tuple.cpp  tuple.h
Whitted Ray Tracer/src/shapes/: sphere.cpp  sphere.h
Whitted Ray Tracer/src/tests/: canvas_test.cpp  colour_test.cpp  intersection_test.cpp  matrix_test.cpp  ray_test.cpp  sphere_test.cpp  tuple_test.cpp
